--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 SECRET_KEY=django-insecure-mj+4md&-ogetpu53xlbnlwp*!66u+od_@+gokliqvh#_2q%+d5
 DB_NAME=cerifynow
 DB_USER=postgres
-DB_PASSWORD=mirmakhmudov16
-DB_HOST=localhost
+DB_PASSWORD=cerifynowhack
+DB_HOST=188.166.179.23
 DB_PORT=5432
 INFURA_URL=https://blockchain.googleapis.com/v1/projects/bt-media-423419/locations/asia-east1/endpoints/ethereum-sepolia/rpc?key=AIzaSyCWy3TUKd6eiWw-mDP92CmdTZtcssWLwe4
 WALLET_ADDRESS=0x345528BC384B69c5304fcB5902d136B40bace6E8
