--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -46,6 +46,8 @@ jobs:
           script: |
             set -e
 
+            cd /home/ubuntu
+
             REPO_DIR="CerifyNow" 
 
             # Clone or update the repository
